--- a/login.html
+++ b/login.html
@@ -5,10 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pedido Ya!</title>
     <link rel="shortcut icon" href="./img/pedidoya.png" type="image/x-icon">
+    <link rel="stylesheet" href="./css/estiloPrueba.css">
 <body>
-    <section class="BIenvenida">
+
+    <section class="Bienvenida">
+        <img class="logo" src="./img/pedidoya.png" alt="" srcset="">
     <h1>Bienvenido a Pedido Ya!</h1>
-    <img src="./img/pedidoya.png" alt="" srcset="">
+    <img class="logoBienvenida" src="./img/undraw_on-the-way_ahi2.svg" alt="" srcset="">
+    <p>Inicia sesión para continuar</p>                                                       
 
 
 </section>
@@ -16,15 +20,15 @@
 <form action="" class="login">
         <label for="email">Usuario</label>
         <input type="email" name="email" id="email" 
-        placeholder="Ingrese su usuario" required>
+        placeholder="Ingrese su usuario">
 
         <label for="password">Contraseña</label>
         <input type="password" name="password" id="password" 
-        placeholder="Ingrese su contraseña" required>
+        placeholder="Ingrese su contraseña">
     
     <a href="index.html" class="boton">Iniciar Sesión</a>
     <p>¿No tienes una cuenta? <a href="#">Regístrate aquí</a></p>
-</div>
+
     </form>
 
 </body>
