--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       overflow: hidden;
       padding: 0;
       border-radius: 1em;
-      mix-blend-mode: multiply;
+
     
         }
         img{
@@ -90,10 +90,11 @@
 
 <section class="listaProductos">
     <div class="productoItem">
-        <div class="productoImagen"><img src="img/istockphoto-520410807-612x612.jpeg" alt="" height="100px"></div>
+        <div class="productoImagen"><img src="img/hot dog.webp" alt="" height="100px"></div>
         <div class="datosProducto">
-        <div class="productoNombre">Hamburguesa</div>    
-        <div class="productoPrecio">$100</div>
+        <div class="productoNombre">Pancho</div>    
+        <div class="productoPrecio">$1500</div>
             <button class="agregarCarrito">Agregar al carrito</button>
+        </div>         
 </body>
 </html>
