--- a/index.html
+++ b/index.html
@@ -95,6 +95,16 @@
         <div class="productoNombre">Pancho</div>    
         <div class="productoPrecio">$1500</div>
             <button class="agregarCarrito">Agregar al carrito</button>
-        </div>         
+        </div>
+    </div>
+    <div class="productoItem">
+        <div class="productoImagen"><img src="img/hamburguesa.jpeg" alt="" height="100px"></div>
+        <div class="datosProducto">
+        <div class="productoNombre">Hamburguesa</div>    
+        <div class="productoPrecio">$2500</div>
+            <button class="agregarCarrito">Agregar al carrito</button>
+        </div>
+    </div>
+    </section>
 </body>
 </html>
